Changelog
=========


2.0.7 (unreleased)
------------------

- Adjust db_connection setup, so it works fine with SQLAlchemy 0.7.x.
  Dropped support for older SQLAlchemy than 0.7.x.
  [phgross]

- Dropped Plone 4.1 compatibility. Only 4.2 and up are supported.
  [lgraf]

- Disable printer for LDAP import configs.
  [lgraf]


- Adjsut imports use now SQLAlchemy 0.7.x.
  [phgross]

- Transporter: Use new DateTime.asdatetime method instead of manuell converting.
  [phgross]


2.0.6 (2012-09-12)
------------------

- Implements the ldap sync configuration configurable.
  Issue #24 LDAP Synchronisation: ldap Anbindung konfigurierbar implementieren.
  https://extranet.4teamwork.ch/projects/0258-projekt-upgrade-opengever-plone-4-paedagogische-hochschule-wallis-ph-vs/tracker-upgrade-auf-gever-plone-4/24/
  [phgross]

- Fixed elephantvocabulary functionality in all Usersvocabularies:
  Add all inactive users as hidden elements to the users vocabularies.
  Issue #1648 Aenderung Dossier unter Bearbeiten wenn Federfuehrender ex-Mitarbeiter ist
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1648/


2.0.5 (2012-06-19)
------------------

- Added decoding the title of the remote objects, to avoid problems with umlaut.
  Issue #1420 Plone Version und Dexterity Version auf aktuellste Version heben.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1420
  [phgross]

- Set the response contenttype correctly, to avoid problems with diazo themes on remote requests.
  Issue #6 Richtigen Content-Type auf der Response bei remote requests zwischen Clients setzen
  https://extranet.4teamwork.ch/intranet/08-produkte-kurse/4teamwork-gever-1/tracker-4teamwork-gever/6
  [phgross]

- Fixed uniquevalues problem in EmailVocabularyFactory, append the username to the mailaddres.
  [phgross]


2.0.4 (2012-03-28)
------------------

- Skipping duplicate users during LDAP import
  [lgraf]
