@@ -5,6 +5,9 @@ Changelog
 2.0.7 (unreleased)
 ------------------
 
+- OGDS-Sync: Update Syncstamp only after the whole Sync. Added sperate ogds-sync logging.
+  [phgross]
+
 - Adjust db_connection setup, so it works fine with SQLAlchemy 0.7.x.
   Dropped support for older SQLAlchemy than 0.7.x.
   [phgross]
